@@ -1200,7 +1200,8 @@ Score is integer or function which receives entity and returns integer."
 	    (goto-char (point-max))
 	    (insert "\n"))
 	  ))
-      (setq ne (point-max))
+      (setq ne (or (next-single-property-change nb 'mime-view-entity)
+		   (point-max)))
       (widen)
       (put-text-property nb ne 'mime-view-entity entity)
       (put-text-property nb ne 'mime-view-situation situation)
